maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: not found: value */
            */
            ^